@@ -1,5 +1,6 @@
 Changes for 1.3.5:
 
+ - fixed fatal error in cbutton.inc.php for some platforms (Alexei)
  - fixed zabbix_server's option -V (Alexei)
  - fixed compilation under Solaris (Alexei)
  - added discovery based on data receivedfrom ZABBIX and SNMP agents (Alexei)
